<resources>
    <string name="app_name">InteriorDesignLogin</string>
    <string name="sign_in_to_continue">Sign In To Continue</string>
    <string name="email">Email</string>
    <string name="your_email">Your Email</string>
    <string name="password">Password</string>
    <string name="your_password">Your Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="home_icon">Home Icon</string>
</resources>
